Updated the side navigation errors

--- a/library-resources.html
+++ b/library-resources.html
@@ -125,8 +125,8 @@
                         <ul id = "sub-navigation-bar">
                             <li class="first-sub-navigation-item hover-highlight">
                                 <a href="proposal-preparation.html">PROPOSAL PREPARATION</a></li>
-                            <li class="last-sub-navigation-item hover-highlight">
-                                <a href="library-resources.html" id = "active-page">LIBRARY RESOURCES</a></li>
+                            <li class="last-sub-navigation-item hover-highlight" id = "active-page">
+                                <a href="library-resources.html">LIBRARY RESOURCES</a></li>
                             <li class="last-sub-navigation-item hover-highlight">
                                 <a  href="point-of-contacts.html">POINT OF CONTACTS</a></li>
                         </ul>
