--- a/point-of-contacts.html
+++ b/point-of-contacts.html
@@ -127,8 +127,8 @@
                                 <a href="proposal-preparation.html">PROPOSAL PREPARATION</a></li>
                             <li class="last-sub-navigation-item hover-highlight">
                                 <a href="library-resources.html">LIBRARY RESOURCES</a></li>
-                            <li class="last-sub-navigation-item hover-highlight">
-                                <a  href="point-of-contacts.html" id = "active-page">POINT OF CONTACTS</a></li>
+                            <li class="last-sub-navigation-item hover-highlight" id = "active-page">
+                                <a  href="point-of-contacts.html" >POINT OF CONTACTS</a></li>
                         </ul>
                     </li>
                     <li class="navigation-items hover-highlight" ><a href="faculty.html">EXPERTS PAGE</a></li>
