--- a/faculty.html
+++ b/faculty.html
@@ -7,13 +7,13 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css">
     <link rel="shortcut icon" href="https://www.albany.edu/sites/default/files/favicon_0.ico"
         type="image/vnd.microsoft.icon">
+    <link rel="stylesheet" href="themes/bootstrap/css/bootstrap-grid.min.css" />
+    <link rel="stylesheet" href="themes/bootstrap/css/bootstrap-reboot.min.css" />
+    <link rel="stylesheet" href="themes/bootstrap/css/bootstrap.min.css" />
     <link rel="stylesheet" href="themes/common.css" />
     <link rel="stylesheet" href="themes/side-navigation.css" />
     <link rel="stylesheet" href="themes/custom-fonts.css" />
     <link rel="stylesheet" href="themes/footer.css" />
-    <link rel="stylesheet" href="themes/bootstrap/css/bootstrap-grid.min.css" />
-    <link rel="stylesheet" href="themes/bootstrap/css/bootstrap-reboot.min.css" />
-    <link rel="stylesheet" href="themes/bootstrap/css/bootstrap.min.css" />
     <link rel="stylesheet" href="themes/faculty-and-researchers.css" />
     <link rel="stylesheet" href="themes/accordion-transparent-theme.css" />
     <title>
@@ -119,10 +119,10 @@
         <div class="display-flex">
             <div class="col-sm-12 col-md-5 col-lg-4 col-xl-3">
                 <ul id="navigation-bar">
-                    <li class="navigation-items hover-highlight" id = "active-page"><a href="faculty-home.html">HOME</a></li>
+                    <li class="navigation-items hover-highlight" ><a href="faculty-home.html">HOME</a></li>
                     <li class="navigation-items hover-highlight" ><a href="fund-opportunities.html">FUND OPPORTUNITIES</a></li>
                     <li class="navigation-items hover-highlight" ><a href="proposal-preparation.html">FUNDER TOOLKIT</a></li>
-                    <li class="navigation-items hover-highlight" ><a href="faculty.html">EXPERTS PAGE</a></li>
+                    <li class="navigation-items hover-highlight" id = "active-page"><a href="faculty.html">EXPERTS PAGE</a></li>
                     <li class="navigation-items hover-highlight" ><a href="#">EVENTS</a></li>
                     <li class="navigation-items hover-highlight" ><a href="#">RESOURCES</a></li>
                 </ul>
