Updated as requested

--- a/faculty-home.html
+++ b/faculty-home.html
@@ -7,13 +7,14 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css">
     <link rel="shortcut icon" href="https://www.albany.edu/sites/default/files/favicon_0.ico"
         type="image/vnd.microsoft.icon">
+    <link rel="stylesheet" href="themes/bootstrap/css/bootstrap-grid.min.css" />
+    <link rel="stylesheet" href="themes/bootstrap/css/bootstrap-reboot.min.css" />
+    <link rel="stylesheet" href="themes/bootstrap/css/bootstrap.min.css" />
     <link rel="stylesheet" href="themes/common.css" />
     <link rel="stylesheet" href="themes/side-navigation.css" />
     <link rel="stylesheet" href="themes/custom-fonts.css" />
     <link rel="stylesheet" href="themes/footer.css" />
-    <link rel="stylesheet" href="themes/bootstrap/css/bootstrap-grid.min.css" />
-    <link rel="stylesheet" href="themes/bootstrap/css/bootstrap-reboot.min.css" />
-    <link rel="stylesheet" href="themes/bootstrap/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="themes/home.css" />
     <title>
         Home | University at Albany
     </title>
@@ -118,10 +119,10 @@
             <div class="col-sm-12 col-md-5 col-lg-4 col-xl-3">
                 <ul id="navigation-bar">
                     <li class="navigation-items hover-highlight" id = "active-page"><a href="faculty-home.html">HOME</a></li>
-                    <li class="navigation-items hover-highlight" ><a href="fund-opportunities.html">FUND OPPORTUNITIES</a></li>
+                    <li class="navigation-items hover-highlight" ><a href="fund-opportunities.html">FUNDING OPPORTUNITIES</a></li>
                     <li class="navigation-items hover-highlight" ><a href="proposal-preparation.html">FUNDER TOOLKIT</a></li>
                     <li class="navigation-items hover-highlight" ><a href="faculty.html">EXPERTS PAGE</a></li>
-                    <li class="navigation-items hover-highlight" ><a href="#">EVENTS</a></li>
+                    <li class="navigation-items hover-highlight" ><a href="events.html">EVENTS</a></li>
                     <li class="navigation-items hover-highlight" ><a href="#">RESOURCES</a></li>
                 </ul>
             </div>
@@ -130,59 +131,47 @@
                     Advancing Research Excellence
                 </h1>
                 <p>
-                    As an Carnegie R1 university, the University at Albany is a top-tier research institution advancing cutting-edge research and scholarship across its nine, schools and over forty research centers. The UAlbany Research Funding Navigator is a web-based platform that provides faculty scholars and researchers a wide array of resources and supports with the goal of succeeding in the pursuit of securing extramural sponsored funding for research and training, which is at the core of our public research university. ​
+                    As an Carnegie R1 university, the University at Albany is a top-tier research institution advancing 
+                    cutting-edge research and scholarship across its nine, schools and over forty research centers. 
+                    The UAlbany Research Funding Navigator is a web-based platform that provides faculty scholars 
+                    and researchers a wide array of resources and supports with the goal of succeeding in the pursuit 
+                    of securing extramural sponsored funding for research and training, which is at the core of our 
+                    public research university. ​
                 </p>
-                <!--div class = "display-flex">
+                <div class = "display-flex">
                     <div class = "col-xl-4 col-lg-6 col-md-12">
-                    <a target = "_blank" href = "covid-19-research-guidance.html">
-                    <div class = "home-logo-container">
-                        <img class = "home-logo" src = "assets/images/campus-message.png">
-                        <p>Guidance to Research Community</p>
-                    </div>
-                    </a>
-                    </div>
-                    <div class = "col-xl-4 col-lg-6 col-md-12">
-                    <a  target = "_blank" href = "UAlbany-suny.html">
+                        <a href = "fund-opportunities.html">
                         <div class = "home-logo-container">
-                            <img class = "home-logo" src = "assets/images/university.png">
-                            <p>Guidance From UAlbany, SUNY and RF - SUNY</p>
+                            <img class = "home-logo" src = "assets/logos/funding.png">
+                            <p>Funding Opportunities</p>
                         </div>
                         </a>
                     </div>
                     <div class = "col-xl-4 col-lg-6 col-md-12">
-                    <a  target = "_blank"  href = "summary-guidance.html">
-                    <div class = "home-logo-container">
-                        <img class = "home-logo" src = "assets/images/federal-guidance.png">
-                        <p>Federal Guidance</p>
+                        <a href = "faculty.html">
+                        <div class = "home-logo-container">
+                            <img class = "home-logo" src = "assets/logos/researcher.png">
+                            <p>Experts</p>
+                        </div>               
+                        </a>
                     </div>
-                    </a>
-                </div>
-                <div class = "col-xl-4 col-lg-6 col-md-12">
-                    <a  target = "_blank" href = "federal-sponsors.html">
-                    <div class = "home-logo-container">
-                        <img class = "home-logo" src = "assets/images/funding.png">
-                        <p>COVID - 19 Funding Opportunities</p>
+                    <div class = "col-xl-4 col-lg-6 col-md-12">
+                        <a href = "events.html">
+                        <div class = "home-logo-container">
+                            <img class = "home-logo" src = "assets/logos/join-a-seminar.png">
+                            <p>Join a Seminar</p>
+                        </div>               
+                        </a>
                     </div>
-                    </a>
-                </div>
-                <div class = "col-xl-4 col-lg-6 col-md-12">
-                    <a  target = "_blank" href = "covid-faculty.html">
-                    <div class = "home-logo-container">
-                        <img class = "home-logo" src = "assets/images/researcher.png">
-                        <p>COVID-19 Experts</p>
-                    </div>               
-                    </a>
-                </div>
-                <div class = "col-xl-4 col-lg-6 col-md-12">
-                    <a  target = "_blank" href = "FAQ.html">
-                    <div class = "home-logo-container">
-                        <img class = "home-logo" src = "assets/images/FAQ.png">
-                        <p>Frequently Asked Questions</p>
+                    <div class = "col-xl-4 col-lg-6 col-md-12">
+                        <a href = "ualbany-research-admin.html">
+                        <div class = "home-logo-container">
+                            <img class = "home-logo" src = "assets/logos/Talk-to-Your-RA.png">
+                            <p>Talk to Your RA</p>
+                        </div>               
+                        </a>
                     </div>
-                    </a>
                 </div>
-                
-            </div-->
             </div>
         </div>
         </div>
