--- a/library-resources.html
+++ b/library-resources.html
@@ -120,19 +120,21 @@
             <div class="col-sm-12 col-md-5 col-lg-4 col-xl-3">
                 <ul id="navigation-bar">
                     <li class="navigation-items hover-highlight" ><a href="faculty-home.html">HOME</a></li>
-                    <li class="navigation-items hover-highlight"><a href="fund-opportunities.html">FUND OPPORTUNITIES</a></li>
-                    <li id="expanded-navigation-item"><a href="proposal-preparation.html">PROPOSAL PREPARATION<i class="fas fa-chevron-down"></i></a>
+                    <li class="navigation-items hover-highlight"><a href="fund-opportunities.html">FUNDING OPPORTUNITIES</a></li>
+                    <li id="expanded-navigation-item"><a href="proposal-preparation.html">FUNDER TOOLKIT<i class="fas fa-chevron-down"></i></a>
                         <ul id = "sub-navigation-bar">
                             <li class="first-sub-navigation-item hover-highlight">
-                                <a href="proposal-preparation.html">PROPOSAL PREPARATION</a></li>
+                                <a href="proposal-preparation.html">Proposal Preparation</a></li>
                             <li class="last-sub-navigation-item hover-highlight" id = "active-page">
-                                <a href="library-resources.html">LIBRARY RESOURCES</a></li>
+                                <a href="library-resources.html">Library Resources</a></li>
                             <li class="last-sub-navigation-item hover-highlight">
-                                <a  href="point-of-contacts.html">POINT OF CONTACTS</a></li>
+                                <a  href="point-of-contacts.html">Talk to a Program Officer</a></li>
+                            <li class="last-sub-navigation-item hover-highlight">
+                                <a  href="ualbany-research-admin.html">Talk to your Research Administrator</a></li>
                         </ul>
                     </li>
                     <li class="navigation-items hover-highlight" ><a href="faculty.html">EXPERTS PAGE</a></li>
-                    <li class="navigation-items hover-highlight" ><a href="#">EVENTS</a></li>
+                    <li class="navigation-items hover-highlight" ><a href="events.html">EVENTS</a></li>
                     <li class="navigation-items hover-highlight" ><a href="#">RESOURCES</a></li>
                 </ul>
             </div>
