--- a/faculty.html
+++ b/faculty.html
@@ -120,10 +120,10 @@
             <div class="col-sm-12 col-md-5 col-lg-4 col-xl-3">
                 <ul id="navigation-bar">
                     <li class="navigation-items hover-highlight" ><a href="faculty-home.html">HOME</a></li>
-                    <li class="navigation-items hover-highlight" ><a href="fund-opportunities.html">FUND OPPORTUNITIES</a></li>
+                    <li class="navigation-items hover-highlight" ><a href="fund-opportunities.html">FUNDING OPPORTUNITIES</a></li>
                     <li class="navigation-items hover-highlight" ><a href="proposal-preparation.html">FUNDER TOOLKIT</a></li>
                     <li class="navigation-items hover-highlight" id = "active-page"><a href="faculty.html">EXPERTS PAGE</a></li>
-                    <li class="navigation-items hover-highlight" ><a href="#">EVENTS</a></li>
+                    <li class="navigation-items hover-highlight" ><a href="events.html">EVENTS</a></li>
                     <li class="navigation-items hover-highlight" ><a href="#">RESOURCES</a></li>
                 </ul>
             </div>
