fixed error in RA page

--- a/ualbany-research-admin.html
+++ b/ualbany-research-admin.html
@@ -155,7 +155,7 @@
                 <input id = "search-box" placeholder = "Type department name"><button id = "search-button" type = "submit"><i class="fa fa-search"></i></button>
                 <br><span id = "search-box-results"></span>
                 <h3>Research Administrators</h3>
-                <div class="researchadmins row">
+                <div class="display-flex">
                     <div class= "col-lg-4 col-md-4 col-sm-6 search-container">
                         <p class="admin-info"><img class="admin-img" src="assets/images/RAS/JessieBeauharnois.png" alt="">
                             <br><span class="title"><strong>Jessie Beauharnois</strong>
