Added points of contact and library resources html pages

--- a/library-resources.html
+++ b/library-resources.html
@@ -142,8 +142,7 @@
                 <h1 class="content-header">
                     Library Resources
                 </h1>
-                <p>(To Be Announced)</p>
-            </div>
+             </div>
         </div>
         </div>
     </section>
@@ -217,6 +216,8 @@
     <!-- End Google Tag Manager (noscript) -->
     <script src= "libraries/jquery/jquery-3.3.1.slim.js"></script>
     <script src="libraries/bootstrap/js/bootstrap.min.js"></script>
+    <script src="js/common.js"></script>
+    <script src="js/loadlibraryresources.js"></script>
 
     <script> $('.carousel').carousel({interval: 3000, pause: false})</script>
 </body>
