--- a/point-of-contacts.html
+++ b/point-of-contacts.html
@@ -142,7 +142,6 @@
                 <h1 class="content-header">
                     Point of Contacts
                 </h1>
-                <p>(To Be Announced)</p>
             </div>
         </div>
         </div>
@@ -215,8 +214,10 @@
     <!-- Google Tag Manager (noscript) -->
     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WNRD5G" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
-    <script src= "libraries/jquery/jquery-3.3.1.slim.js"></script>
+    <script src="libraries/jquery/jquery-3.3.1.slim.js"></script>
     <script src="libraries/bootstrap/js/bootstrap.min.js"></script>
+    <script src="js/common.js"></script>
+    <script src="js/loadpointsofcontact.js"></script>
 
     <script> $('.carousel').carousel({interval: 3000, pause: false})</script>
 </body>
