--- a/library-resources.html
+++ b/library-resources.html
@@ -14,8 +14,7 @@
     <link rel="stylesheet" href="themes/bootstrap/css/bootstrap-grid.min.css" />
     <link rel="stylesheet" href="themes/bootstrap/css/bootstrap-reboot.min.css" />
     <link rel="stylesheet" href="themes/bootstrap/css/bootstrap.min.css" />
-    <link rel = "stylesheet" href = "themes/dropdown.css">
-    <link rel = "stylesheet" href = "themes/accordion.css">
+    <link rel="stylesheet" href="themes/libraryresource.css">
     <title>
         Library Resources | University at Albany
     </title>
