posted last updated date

--- a/library-resources.html
+++ b/library-resources.html
@@ -141,6 +141,7 @@
                 <h1 class="content-header">
                     Library Resources
                 </h1>
+                <p id = "last-updated"></p>
              </div>
         </div>
         </div>
