--- a/point-of-contacts.html
+++ b/point-of-contacts.html
@@ -142,6 +142,7 @@
                 <h1 class="content-header">
                     Point of Contacts
                 </h1>
+                <p id = "last-updated"></p>
             </div>
         </div>
         </div>
