--- a/proposal-preparation.html
+++ b/proposal-preparation.html
@@ -142,6 +142,7 @@
                 <h1 class="content-header">
                    Proposal Preparation
                 </h1>
+                <p id = "last-updated"></p>
             </div>
         </div>
         </div>
