--- a/events.html
+++ b/events.html
@@ -123,6 +123,7 @@
                     <li class="navigation-items hover-highlight" ><a href="proposal-preparation.html">FUNDER TOOLKIT</a></li>
                     <li class="navigation-items hover-highlight" ><a href="faculty.html">EXPERTS PAGE</a></li>
                     <li class="navigation-items hover-highlight" id = "active-page"><a href="events.html">EVENTS</a></li>
+                    <li class="navigation-items hover-highlight" ><a href="blog.html">BLOG</a></li>
                     <li class="navigation-items hover-highlight" ><a href="#">RESOURCES</a></li>
                 </ul>
             </div>
@@ -202,9 +203,8 @@
     <!-- Google Tag Manager (noscript) -->
     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WNRD5G" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
-    <script src= "libraries/jquery/jquery-3.3.1.slim.js"></script>
+    <script src="libraries/jquery/jquery-3.3.1.slim.js"></script>
     <script src="libraries/bootstrap/js/bootstrap.min.js"></script>
     <script> $('.carousel').carousel({interval: 3000, pause: false})</script>
 </body>
-
 </html>
