updated points of contacts

--- a/blog.html
+++ b/blog.html
@@ -131,6 +131,7 @@
                 <h1 class="content-header">
                     BLOG
                 </h1>
+                <div id="dib-posts"></div>
             </div>
         </div>
     </section>
@@ -205,7 +206,10 @@
     <script src="libraries/jquery/jquery-3.3.1.slim.js"></script>
     <script src="libraries/bootstrap/js/bootstrap.min.js"></script>
     <script> $('.carousel').carousel({interval: 3000, pause: false})</script>
-    <script src="js/load-blog-posts.js"></script>
+    <script>var dib_id = 'TJ1U42QNDUJDQ8LULSOQ';</script>
+    <script>var dib_base_url = 'http://127.0.0.1:8080/FacultyDev/blog.html';</script>
+    <script>var dib_categories = 'funding'</script>
+    <script src="https://dropinblog.com/js/embed.js"></script>
 </body>
 
 </html>
