Updated ras page

--- a/ualbany-research-admin.html
+++ b/ualbany-research-admin.html
@@ -155,194 +155,7 @@
                 <p class="spanblackbold">Search for Research Administrator by Department</p>
                 <input id = "search-box" placeholder = "Type department name"><button id = "search-button" type = "submit"><i class="fa fa-search"></i></button>
                 <br><span id = "search-box-results"></span>
-                <h3>Research Administrators</h3>
-                <div class="display-flex">
-                    <div class= "col-lg-4 col-md-4 col-sm-6 search-container">
-                        <p class="admin-info"><img class="admin-img" src="assets/images/RAs/JessieBeauharnois.png" alt="">
-                            <br><span class="title"><strong>Jessie Beauharnois</strong>
-                            <br><span class="email"><a href="mailto:jbeauharnois@albany.edu">jbeauharnois@albany.edu</a></span></span>
-                            <br><span class="departments"><strong>Departments:</strong><br>Atmospheric Sciences Research Center <br>
-                            Center for Applied Historical Research <br>
-                            Center for Latino/Latin American & Caribbean Studies <br>
-                            Center for Stress & Anxiety Disorders <br>
-                            Center for X-Ray Optics <br>
-                            Dean's Office - CEHC <br>
-                            EOP <br>
-                            Information Security <br>
-                            Information Studies <br>
-                            Institute for Financial Market Regulations <br>
-                            Institute for Programming & Logic <br>
-                            Institute for Teaching Learning & Academic Leadership <br>
-                            Institute of Biomolecular Stereodynamics <br>
-                            Institute of Cypriot Studies <br>
-                            Ion Beam Laboratory <br>
-                            Judaic Studies <br>
-                            Mesonet <br>
-                            National Center for Security and Preparedness <br>
-                            Psychological Services Center <br>
-                            Writing Center</span> 
-                        </p>
-                    </div>
-                    <div class= "col-lg-4 col-md-4 col-sm-6 search-container">
-                        <p class="admin-info"><img class="admin-img" src="assets/images/RAs/StefanBrooks.png" alt="">
-                            <br><span class="title"><strong>Stefan Brooks</strong>
-                            <br><span class="email"><a href="mailto:sfbrooks@albany.edu">sfbrooks@albany.edu</a></span></span>
-                            <br><span class="departments"><strong>Departments:</strong><br>Albany Institute for Research in Education <br>
-                            CEAS Dean's Office <br>
-                            Center for Innovation in Career Development <br>
-                            Center on English Learning & Achievement <br>
-                            Child Research & Study Center <br>
-                            Computer Science <br>
-                            Counseling Center <br>
-                            Dean - School of Education <br>
-                            Department of Literacy Teaching & Learning <br>
-                            Educational and Counseling Psychology <br>
-                            Educational Policy & Leadership <br>
-                            Educational Psychology & Methodology <br>
-                            Educational Psychology & Statistics <br>
-                            Educational Theory & Practice <br>
-                            Electrical & Computer Engineering <br>
-                            Environmental & Sustainable Engineering <br>
-                            Informatics <br>
-                            Informatics, Logics & Security Studies <br>
-                            School Psychology Program <br>
-                            Special Education</span> 
-                        </p>
-                    </div>
-                    <div class= "col-lg-4 col-md-4 col-sm-6 search-container">
-                        <p class="admin-info"><img class="admin-img" src="assets/images/RAs/ChristineMcCrary.png" alt="">
-                            <br><span class="title"><strong>Christine McCrary</strong>
-                            <br><span class="email"><a href="mailto:PurpleTeam@albany.edu">PurpleTeam@albany.edu</a></span></span>
-                            <br><span class="departments"><strong>Departments:</strong><br>Biomedical Science <br>
-                            Environmental Health Sciences <br>
-                            Institute for Health & the Environment
-                        </p>
-                    </div>
-                    <div class= "col-lg-4 col-md-4 col-sm-6 search-container">
-                        <p class="admin-info"><img class="admin-img" src="assets/images/RAs/MeganMosher.png" alt="">
-                            <br><span class="title"><strong>Megan Mosher</strong>
-                            <br><span class="email"><a href="mailto:PurpleTeam@albany.edu">PurpleTeam@albany.edu</a></span></span>
-                            <br><span class="departments"><strong>Departments:</strong><br>Center for Elimination of Minority Health Disparities</span>
-                        </p>
-                    </div>
-                    <div class= "col-lg-4 col-md-4 col-sm-6 search-container">
-                        <p class="admin-info"><img class="admin-img" src="assets/images/profile_place_holder.png" alt="">
-                            <br><span class="title"><strong>Rebecca Palozzi Keefe</strong>
-                            <br><span class="email"><a href="mailto:rpalozzi@albany.edu">rpalozzi@albany.edu</a></span></span>
-                            <br><span class="departments"><strong>Departments:</strong>
-                        </p>
-                    </div>
-                    <div class= "col-lg-4 col-md-4 col-sm-6 search-container">
-                        <p class="admin-info"><img class="admin-img" src="assets/images/RAs/SharonRay.png" alt="">
-                            <br><span class="title"><strong>Sharon Ray</strong>
-                            <br><span class="email"><a href="mailto:sbray@albany.edu">sbray@albany.edu</a></span></span>
-                            <br><span class="departments"><strong>Departments:</strong><br>Accounting <br>
-                            Accounting and Law <br>
-                            Center for Disaster Management <br>
-                            Center for International Development <br>
-                            Center for International Education & Global Strategy <br>
-                            Center for Technology in Government <br>
-                            Dean's Office - School of Business <br>
-                            FACETS <br>
-                            Finance <br>
-                            Forensic Accounting <br>
-                            Information Security & Digital Forensics <br>
-                            Information Technology Management <br>
-                            Management <br>
-                            Marketing <br>
-                            New York State Center for Information Forensics and Assurance <br>
-                            NYS Small Business Development Center <br>
-                            Small Business Development Center</span> 
-                        </p>
-                    </div>
-                    <div class= "col-lg-4 col-md-4 col-sm-6 search-container">
-                        <p class="admin-info"><img class="admin-img" src="assets/images/RAs/DorisRomand.png" alt="">
-                            <br><span class="title"><strong>Doris A Romand</strong>
-                            <br><span class="email"><a href="mailto:PurpleTeam@albany.edu">PurpleTeam@albany.edu</a></span></span>
-                            <br><span class="departments"><strong>Departments:</strong>
-                        </p>
-                    </div>
-                    <div class= "col-lg-4 col-md-4 col-sm-6 search-container">
-                        <p class="admin-info"><img class="admin-img" src="assets/images/RAs/DanielWhaley.png" alt="">
-                            <br><span class="title"><strong>Daniel Whaley</strong>
-                            <br><span class="email"><a href="mailto:dwhaley@albany.edu">dwhaley@albany.edu</a></span></span>
-                            <br><span class="departments"><strong>Departments:</strong><br>Center for Excellence in Aging Services <br>
-                            Center for Human Services Research <br>
-                            Center for Jewish Studies <br>
-                            Center for Policy Research <br>
-                            Center for Social & Demo Analysis <br>
-                            Center for Social Work Practice Research <br>
-                            Center for Women in Government <br>
-                            Criminal Justice <br>
-                            Dean's Office Rockefeller College <br>
-                            English <br>
-                            Hindelang Criminal Justice Research Center <br>
-                            Institute for Research on Women <br>
-                            Institute for Traffic Safety Management & Research <br>
-                            Institute of Gerontology <br>
-                            NYS Writers' Institute <br>
-                            Political Science <br>
-                            Professional Development Program <br>
-                            Public Administration <br>
-                            Public Administration & Policy <br>
-                            Social Welfare <br>
-                            University Art Museum <br>
-                            Youth Justice Best Practices Institute</span>
-                        </p>
-                    </div>
-                    <div class= "col-lg-4 col-md-4 col-sm-6 search-container">
-                        <p class="admin-info"><img class="admin-img" src="assets/images/RAs/GoldTeam.gif" alt="">
-                            <br><span class="title"><strong>Gold Team</strong>
-                            <br><span class="email"><a href="mailto:GoldTeam@albany.edu">GoldTeam@albany.edu</a></span></span>
-                            <br><span class="departments"><strong>Departments:</strong><br>
-                    </div>
-                    <div class= "col-lg-4 col-md-4 col-sm-6 search-container">
-                        <p class="admin-info"><img class="admin-img" src="assets/images/RAs/PurpleTeam.gif" alt="">
-                            <br><span class="title"><strong>Purple Team</strong>
-                            <br><span class="email"><a href="mailto:PurpleTeam@albany.edu">PurpleTeam@albany.edu</a></span></span>
-                            <br><span class="departments"><strong>Departments:</strong><br>Africana Studies<br>
-                            Anthropology <br>
-                            Art & Art History <br>
-                            Atmospheric and Environmental Sciences <br>
-                            Biology <br>
-                            CAS College Office <br>
-                            Center for Autism and Related Disabilities <br>
-                            Center for Biochemistry and Biophysics <br>
-                            Center for Functional Genomics <br>
-                            Center for Global Health <br>
-                            Center for Health Workforce Studies <br>
-                            Center for Neuroscience Research <br>
-                            Center for Public Health Preparedness <br>
-                            Center for the Study of Functional Genomics <br>
-                            Chemistry <br>
-                            Communication <br>
-                            Dean - School of Public Health <br>
-                            East Asian Studies <br>
-                            Econometrics Research Institute <br>
-                            Economics <br>
-                            Epidemiology & Biostatistics <br>
-                            GenNYsis Center for Excellence <br>
-                            Geography & Planning <br>
-                            Health Policy <br>
-                            History <br>
-                            Institute for Advancement of Health Care Management <br>
-                            Institute for Mesoamerican Studies <br>
-                            Language/Literature & Culture <br>
-                            Latin American/Caribbean & US Latino Studies <br>
-                            Lewis Mumford Center <br>
-                            Linguistics <br>
-                            Mathematics & Statistics <br>
-                            Music & Theatre <br>
-                            NYS Theatre Institute <br>
-                            Philosophy <br>
-                            Physics <br>
-                            Psychology <br>
-                            Sociology <br>
-                            SPH Continuing Education <br>
-                            The RNA Institute</span>    
-                        </p>
-                    </div> 
-                </div>    
+                <h3>Research Administrators</h3>   
             </div>
         </div>
         </div>
@@ -418,6 +231,8 @@
     <script src= "libraries/jquery/jquery-3.3.1.slim.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="libraries/bootstrap/js/bootstrap.min.js"></script>
+    <script src="js/common.js"></script>
+    <script src="js/loadras.js"></script>
     <script src="js/search-simple.js"></script>
     <script> $('.carousel').carousel({interval: 3000, pause: false})</script>
 </body>
