updated research admin page

--- a/ualbany-research-admin.html
+++ b/ualbany-research-admin.html
@@ -233,7 +233,7 @@
     <script src="libraries/bootstrap/js/bootstrap.min.js"></script>
     <script src="js/common.js"></script>
     <script src="js/loadras.js"></script>
-    <script src="js/search-simple.js"></script>
+    <script src="js/search-ras.js"></script>
     <script> $('.carousel').carousel({interval: 3000, pause: false})</script>
 </body>
 
